--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 <p>Причини - зріст населення, війни</p>
 <p>Наслідки - поширення грецької культури</p>
 <h2>Відомі люди</h2>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Aristotle_Altemps_Inv8575.jpg/274px-Aristotle_Altemps_Inv8575.jpg"/>
+<p>Арістотель</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVBsgVM1PtirDnLZEjMIPGAsR8nq1e-a-HR0YoauH-8g&s"/>
+<p>Гіппократ</p>
+<a href="https://uk.wikipedia.org/wiki/%D0%A1%D1%82%D0%B0%D1%80%D0%BE%D0%B4%D0%B0%D0%B2%D0%BD%D1%8F_%D0%93%D1%80%D0%B5%D1%86%D1%96%D1%8F">Детальніше про Грецію можете дізнатися тут</a>
 </main>
 </body>
 </html>
